--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "@material-ui/core": "^1.2.2",
     "axios": "^0.18.0",
     "http-proxy-middleware": "^0.19.1",
+    "node-sass": "^4.11.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-dropzone": "^4.2.12",
@@ -21,7 +23,8 @@
     "react-slick": "^0.23.1",
     "redux": "^4.0.0",
     "redux-promise": "^0.6.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sass-loader": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
