--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-slick": "^0.23.1",
+    "react-text-truncate": "^0.13.1",
     "redux": "^4.0.0",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
