--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
     "react-paypal-express-checkout": "^1.0.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.2",
     "react-slick": "^0.23.1",
     "react-text-truncate": "^0.13.1",
     "redux": "^4.0.0",
